--- a/app/src/main/res/layout/item_inicial.xml
+++ b/app/src/main/res/layout/item_inicial.xml
@@ -54,6 +54,17 @@
                     android:layout_marginRight="10dp"/>
 
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <ImageButton
+                    android:id="@+id/idIconoFavInit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_nofav"
+                    android:onClick="fav"
+                    />
+            </LinearLayout>
 
         </LinearLayout>
 
