--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -79,6 +79,16 @@
                     android:layout_height="wrap_content"
                     android:text="5"/>
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <ImageButton
+                    android:id="@+id/idIconoFav"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_nofav"
+                    />
+            </LinearLayout>
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
