--- a/app/src/main/res/layout/fragment_detalle_alimento_general.xml
+++ b/app/src/main/res/layout/fragment_detalle_alimento_general.xml
@@ -57,6 +57,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/txtFavDetalle"
             android:text="Favoritos"/>
 
 
