--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,6 +22,8 @@
         android:textStyle="bold"
         android:textSize="50dp"
         android:layout_margin="5dp"
+
+
         />
 
 
@@ -78,6 +87,16 @@
         android:visibility="visible"
         android:layout_marginBottom="30dp"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Mas"
+        android:textStyle="bold"
+        android:textSize="30dp"
+        android:layout_margin="5dp"
+        android:drawableLeft="@drawable/ic_add_black_24dp"
+        />
+
     <Button
         android:hint="Opciones"
         android:textSize="25dp"
@@ -91,3 +110,4 @@
 
 
 </LinearLayout>
+</ScrollView>
