--- a/app/src/main/res/layout/fragment_opciones.xml
+++ b/app/src/main/res/layout/fragment_opciones.xml
@@ -3,14 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Opciones">
+    tools:context=".Opciones"
+    android:background="@drawable/imgroblon"
+    >
 
     <!-- TODO: Update blank fragment layout -->
+
 
     <Button
         android:id="@+id/btLogOut"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:text="Cerrar Sesión" />
 
 </RelativeLayout>
