--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -12,7 +12,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".FragmentMenu"
-    android:background="#d8ffd3"
+    android:background="#FFFCCA"
     >
 
     <TextView
