--- a/app/src/main/res/layout/fragment_menu_creacion.xml
+++ b/app/src/main/res/layout/fragment_menu_creacion.xml
@@ -12,7 +12,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clickable="true"
-    tools:context=".menu_creacion"
+    tools:context=".Fragments.menu_creacion"
 
     >
 
